# image-processing-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  helloworld.cpp  main.cpp
include/: cli.h
src/: cli.cpp  main.cpp
